# folder-classification

./: .gitignore  README.md  pyproject.toml  scripts.py
app/src/: main.py  requirements.txt
app/src/application/use_cases/: move_files_to_classification_folder.py
app/src/domain/constants/: file_classification_dict.py
app/src/domain/entities/: file_item.py
app/src/infra/: file_handler.py
app/test/: move_files_to_classification_folder_test.py
src/: main.py
src/domain/entities/: file_item.py
src/infra/watchdog/: file_watcher.py
tests/: move_files_to_classification_folder_test.py
